fix: fix the cut off text in modal card by removing all clases each time the modal is closed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,11 +98,11 @@ h1,h2,h2 {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.container--center{
+/* .container--center{
     display:flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .container__title{
     text-align: center;
@@ -320,7 +320,7 @@ https://www.youtube.com/watch?v=ZniVgo8U7ek */
     background-color: var(--secondary-color);
 }
 
-.card__text {
+.card__txt {
     font-size: 0.2rem;
     text-align: center;
     padding: 2px;
@@ -353,9 +353,10 @@ https://www.youtube.com/watch?v=ZniVgo8U7ek */
 }
 
 
-.card__modal--text{
+.card__modal--txt{
+    height: 250px;
     padding: 10px;
-    overflow: scroll;
+    overflow: auto;
     margin: 0 auto;
 }
 
